--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-1970-2030.min.js"></script>
+
     <title>Wold Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select name="" id="">
+        <option value="">Select a city</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Tokyo</option>
+      </select>
+      <div id="citys"></div>
+      <h2>Los Angeles 🇺🇸</h2>
+      <div class="date">August 12th 2025</div>
+      <div class="time">12:23:21 AM</div>
+    </div>
+       <div id="citys"></div>
+      <h2>Sydney 🇦🇺</h2>
+      <div class="date">August 12th 2025</div>
+      <div class="time">12:23:21 AM</div>
+    </div>
     <footer>
       This produck was coded by Joanna Ernet and is
       <a href="https://github.com/joanna-anna/World-Clocks" target="_blank"
         >open sourced on GitHub.</a
       >
     </footer>
+
     <script src="JavaScript/index.js"></script>
   </body>
 </html>
