Styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -19,18 +19,25 @@
         <option value="">New York</option>
         <option value="">Tokyo</option>
       </select>
-      <div id="citys"></div>
-      <h2>Los Angeles 🇺🇸</h2>
-      <div class="date">August 12th 2025</div>
-      <div class="time">12:23:21 AM</div>
-    </div>
-       <div id="citys"></div>
-      <h2>Sydney 🇦🇺</h2>
-      <div class="date">August 12th 2025</div>
-      <div class="time">12:23:21 AM</div>
+
+      <div class="city">
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">August 12th 2025</div>
+        </div>
+        <div class="time">12:23:21 <small>AM</small></div>
+      </div>
+
+      <div class="city">
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">August 12th 2025</div>
+        </div>
+        <div class="time">12:23:21 <small>AM</small></div>
+      </div>
     </div>
     <footer>
-      This produck was coded by Joanna Ernet and is
+      This produck was coded by <strong>Joanna Ernet</strong> and is
       <a href="https://github.com/joanna-anna/World-Clocks" target="_blank"
         >open sourced on GitHub.</a
       >
