--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         <option value="">Tokyo</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">August 12th 2025</div>
+          <div class="date"></div>
         </div>
-        <div class="time">12:23:21 <small>AM</small></div>
+        <div class="time">></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="paris">
         <div>
           <h2>Paris 🇫🇷</h2>
-          <div class="date">August 12th 2025</div>
+          <div class="date"></div>
         </div>
-        <div class="time">12:23:21 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
