Added the functionality for the select

--- a/index.html
+++ b/index.html
@@ -7,33 +7,35 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-1970-2030.min.js"></script>
 
-    <title>Wold Clock</title>
+    <title>Wold Clock-JOANNA ERNET</title>
   </head>
   <body>
     <div class="container">
       <h1>World Clock</h1>
 
-      <select name="" id="">
+      <select id="city">
         <option value="">Select a city</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Tokyo</option>
+        <option value="Europe/London">London 🇬🇧</option>
+        <option value="Amarica/New_York">New York 🇺🇸</option>
+        <option value="Pacific/Auckland">Auckland 🇦🇺</option>
       </select>
 
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date"></div>
+      <div id="cieties">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles 🇺🇸</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time">></div>
-      </div>
 
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris 🇫🇷</h2>
-          <div class="date"></div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris 🇫🇷</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
