Added new location in select and link colour in CSS

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <option value="Europe/London">London 🇬🇧</option>
         <option value="Amarica/New_York">New York 🇺🇸</option>
         <option value="Pacific/Auckland">Auckland 🇦🇺</option>
+        <option value="America/Lima">Lima🇵🇪</option>
+        <option value="Asia/Ulaanbaatar">Ulaanbaator🇲🇳</option>
+        <option value="Chile/EasterIsland">Easter Island 🇨🇱</option>
       </select>
 
       <div id="cieties">
