Added Tokyo and final correction

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <option value="Amarica/New_York">New York 🇺🇸</option>
         <option value="Pacific/Auckland">Auckland 🇦🇺</option>
         <option value="America/Lima">Lima 🇵🇪</option>
-        <option value="Asia/Ulaanbaatar">Ulaanbaator 🇲🇳</option>
+        <option value="Asia/Ulaanbaatar">Ulaanbaator🇲🇳</option>
         <option value="Chile/EasterIsland">Easter Island 🇨🇱</option>
       </select>
 
@@ -36,6 +36,14 @@
         <div class="city" id="paris">
           <div>
             <h2>Paris 🇫🇷</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+
+        <div class="city" id="tokyo">
+          <div>
+            <h2>Tokyo 🇯🇵</h2>
             <div class="date"></div>
           </div>
           <div class="time"></div>
